--- a/docs/reference-guide/modules/migration/partials/nav.adoc
+++ b/docs/reference-guide/modules/migration/partials/nav.adoc
@@ -6,3 +6,4 @@
 ** xref:migration:understanding-architecture-principles.adoc[]
 ** xref:migration:paths/index.adoc[]
 *** xref:migration:paths/messages.adoc[]
+*** xref:migration:paths/aggregates.adoc[]
