--- a/docs/reference-guide/modules/migration/pages/paths/index.adoc
+++ b/docs/reference-guide/modules/migration/pages/paths/index.adoc
@@ -14,7 +14,7 @@ Whether you are performing a straightforward version bump or a deep architectura
 * xref:migration:paths/messages.adoc[Message Migration (@Event, @Command, @Query)]
 * _Event Processor configuration in Axon Framework 5 (Coming soon)_
 * xref:migration:paths/messages.adoc[Message changes (@Event, @Command, @Query)]
-* _Aggregate to Entity (Coming soon)_
+* xref:migration:paths/aggregates.adoc[Aggregate changes]
 * _Event Processor configuration in AF5 (Coming soon)_
 * _Test fixtures (Coming soon)_
 * _Serializer to Converter configuration changes (Coming soon)_
